--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "card-validator": "^3.0.0",
     "prop-types": "^15.6.0",
-    "react-native-flip-card": "3.5.5",
+    "react-native-flip-card": "kardoso/react-native-flip-card#remove-deprecated",
     "lodash.compact": "^3.0.1",
     "lodash.every": "^4.6.0",
     "lodash.pick": "^4.4.0",
